--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "GHERSA",
   "version": "0.0.1",
+  "engines": {
+    "npm": "6.12.0"
+  },
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
