--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "GHERSA",
   "version": "0.0.1",
   "engines": {
-     "node": "12.13.0"
+     "node": "12.13.0",
+     "npm": "6.12.0"
   },
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
