--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "EcoBusiness",
   "version": "0.0.1",
+  "engines": {
+    "node": "12.13.0"
+  },
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
   "private": true,
